RESOLVED FIXED 91671
[Chromium] WebView is missing isSelectionEditable and backgroundColor which are used by chromium-android
https://bugs.webkit.org/show_bug.cgi?id=91671
Summary [Chromium] WebView is missing isSelectionEditable and backgroundColor which a...
Adam Barth
Reported 2012-07-18 14:27:51 PDT
[Chromium] WebView is missing isSelectionEditable and backgroundColor which are used by chromium-android
Attachments
Patch (4.25 KB, patch)
2012-07-18 14:28 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-07-18 14:28:33 PDT
WebKit Review Bot
Comment 2 2012-07-18 14:31:37 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
WebKit Review Bot
Comment 3 2012-07-19 11:10:23 PDT
Comment on attachment 153089 [details] Patch Clearing flags on attachment: 153089 Committed r123123: <http://trac.webkit.org/changeset/123123>
WebKit Review Bot
Comment 4 2012-07-19 11:10:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.