[Chromium] WebView is missing isSelectionEditable and backgroundColor which are used by chromium-android https://bugs.webkit.org/show_bug.cgi?id=91671

Reviewed by Darin Fisher.

I haven't studied what these APIs are used for downstream, but they
seem harmless enough.

* public/WebView.h:
(WebView):
* public/WebWidget.h:
(WebWidget):
(WebKit::WebWidget::backgroundColor):
* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::isSelectionEditable):
(WebKit):
(WebKit::WebViewImpl::backgroundColor):
* src/WebViewImpl.h:
(WebViewImpl):


Canonical link: https://commits.webkit.org/109581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123123 268f45cc-cd09-0410-ab3c-d52691b4dbfc